# kit

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tsp
3Etapas/: BuscaLocal.cpp  Construcao.cpp  construcao
src/: BuscaLocal.cpp  BuscaLocal.h  Construcao.cpp  Construcao.h  Perturbacao.cpp  Perturbacao.h  main.cpp
